Saving before I delete stuff

--- a/calibrate_cameras.ipynb
+++ b/calibrate_cameras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare object points for 30mm grid\n",
     "objp = np.zeros((5*7,3), np.float32)\n",
-    "objp[:,:2] = np.mgrid[0:7,0:5].T.reshape(-1,2)\n",
+    "# objp[:,:2] = np.mgrid[0:7,0:5].T.reshape(-1,2)\n",
+    "\n",
+    "objp[:,:2] = np.mgrid[0:5,0:7].T.reshape(-1,2)\n",
     "\n",
     "# objp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -42,17 +44,19 @@
       "True\n",
       "True\n",
       "True\n",
-      "True\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "# image_folder = \"./calibration_data/visible/\"\n",
-    "# point_folder = \"./extracted_points/visible/\"\n",
+    "image_folder = \"./calibration_data/visible/\"\n",
+    "point_folder = \"./extracted_points/visible/\"\n",
     "\n",
-    "image_folder = \"./calibration_data/thermal_dots_binary/\"\n",
-    "point_folder = \"./extracted_points/thermal_dots/\"\n",
+    "# image_folder = \"./calibration_data/thermal/\"\n",
+    "# point_folder = \"./extracted_points/thermal/\"\n",
+    "\n",
+    "# image_folder = \"./calibration_data/thermal_dots_binary/\"\n",
+    "# point_folder = \"./extracted_points/thermal_dots/\"\n",
     "\n",
     "objpoints = []\n",
     "imgpoints = []\n",
@@ -62,7 +66,6 @@
     "for fname in images:\n",
     "\t# Generate image points\n",
     "\tgray = cv2.imread(os.path.join(image_folder, fname), cv2.IMREAD_GRAYSCALE)\n",
-    "\t# gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "\n",
     "\t# Set blob detector parameters\n",
     "\tparams = cv2.SimpleBlobDetector_Params()\n",
@@ -77,11 +80,12 @@
     "\tif int(ver[0]) < 3 : detector = cv2.SimpleBlobDetector(params)\n",
     "\telse : detector = cv2.SimpleBlobDetector_create(params)\n",
     "\n",
-    "\tret, corners = cv2.findCirclesGrid(gray, (7, 5), None, blobDetector=detector)\n",
-    "\t# ret, corners = cv2.findChessboardCorners(gray, (5,7), None)\n",
+    "\t# Find Corners\n",
+    "\tret = False\n",
+    "\t# ret, corners = cv2.findCirclesGrid(gray, (7, 5), None, blobDetector=detector)\n",
+    "\tret, corners = cv2.findChessboardCorners(gray, (5,7), None)\n",
     "\tprint(ret)\n",
-    "\t# ret = False\n",
-    "\n",
+    "\t\n",
     "\t# Draw corners\n",
     "\tout = cv2.drawChessboardCorners(cv2.cvtColor(gray, cv2.COLOR_GRAY2BGR), (7, 5), corners, ret)\n",
     "\tcv2.namedWindow(\"img\", cv2.WINDOW_NORMAL)\n",
@@ -91,10 +95,10 @@
     "\n",
     "\t# Save image points\n",
     "\tif ret:\n",
-    "\t\tcriteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 30, 0.001)\n",
-    "\t\t# points = cv2.cornerSubPix(gray, corners, (11,11), (-1,-1), criteria)\n",
     "\t\tpoints = corners\n",
-    "\t\t\n",
+    "\t\tcriteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 30, 0.001)\n",
+    "\t\tpoints = cv2.cornerSubPix(gray, corners, (11,11), (-1,-1), criteria)\n",
+    "\n",
     "\telse:\n",
     "\t\tname = fname.split(\".\")[0]\n",
     "\t\tpoints = np.loadtxt(os.path.join(point_folder, f\"{name}.csv\"), delimiter=\",\", dtype=float)\n",
@@ -108,105 +112,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compute parameters\n",
-    "vals = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
+    "h, w = gray.shape[:2]\n",
+    "vals = cv2.calibrateCamera(objpoints, imgpoints, (w,h), None, None)\n",
     "keys = (\"ret\", \"mtx\", \"dist\", \"rvecs\", \"tvecs\")\n",
     "\n",
-    "params = dict(zip(keys, vals))"
+    "params = dict(zip(keys, vals))\n",
+    "del params[\"rvecs\"]\n",
+    "del params[\"tvecs\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ret': 0.47061607556591145,\n",
-       " 'mtx': array([[106.81900551,   0.        ,  80.18608746],\n",
-       "        [  0.        , 106.59690739,  58.75167093],\n",
+       "{'ret': 0.18752077616544316,\n",
+       " 'mtx': array([[524.36570593,   0.        , 322.57309627],\n",
+       "        [  0.        , 525.87381374, 242.91852868],\n",
        "        [  0.        ,   0.        ,   1.        ]]),\n",
-       " 'dist': array([[-4.12178322e-01,  2.54950779e-01,  1.19979067e-04,\n",
-       "          6.58896245e-04, -1.22605020e-01]]),\n",
-       " 'rvecs': (array([[ 0.0619533 ],\n",
-       "         [ 0.37447569],\n",
-       "         [-0.09555566]]),\n",
-       "  array([[ 0.16983416],\n",
-       "         [-0.20026203],\n",
-       "         [-0.09054098]]),\n",
-       "  array([[-0.2537458 ],\n",
-       "         [ 0.35591091],\n",
-       "         [-0.01178317]]),\n",
-       "  array([[ 0.09622055],\n",
-       "         [ 0.23957034],\n",
-       "         [-0.10128528]]),\n",
-       "  array([[ 0.15529845],\n",
-       "         [-0.08555605],\n",
-       "         [-0.01720071]]),\n",
-       "  array([[ 0.10602029],\n",
-       "         [ 0.17875406],\n",
-       "         [-0.13271203]]),\n",
-       "  array([[ 0.04736322],\n",
-       "         [ 0.27206284],\n",
-       "         [-0.14399828]]),\n",
-       "  array([[ 0.12870746],\n",
-       "         [ 0.28159082],\n",
-       "         [-0.14210873]]),\n",
-       "  array([[ 0.131383  ],\n",
-       "         [-0.09457398],\n",
-       "         [-0.28153506]]),\n",
-       "  array([[ 0.17063119],\n",
-       "         [ 0.04740858],\n",
-       "         [-0.07017093]])),\n",
-       " 'tvecs': (array([[-1.56602138],\n",
-       "         [-1.47362583],\n",
-       "         [ 7.92739986]]),\n",
-       "  array([[-4.87996795],\n",
-       "         [-2.06068588],\n",
-       "         [ 6.05052252]]),\n",
-       "  array([[-1.58361146],\n",
-       "         [-0.31853133],\n",
-       "         [ 9.34480055]]),\n",
-       "  array([[-1.68698602],\n",
-       "         [-1.45173434],\n",
-       "         [ 7.05032701]]),\n",
-       "  array([[-4.4943211 ],\n",
-       "         [-1.48784574],\n",
-       "         [ 5.73763384]]),\n",
-       "  array([[-2.48032069],\n",
-       "         [-1.31507856],\n",
-       "         [ 6.09585367]]),\n",
-       "  array([[-1.94280071],\n",
-       "         [-1.80318631],\n",
-       "         [ 7.00770519]]),\n",
-       "  array([[-2.87808217],\n",
-       "         [-1.32197687],\n",
-       "         [ 7.37368037]]),\n",
-       "  array([[-3.09018413],\n",
-       "         [-1.90195716],\n",
-       "         [ 6.15515909]]),\n",
-       "  array([[-2.81484577],\n",
-       "         [-1.71749645],\n",
-       "         [ 6.86073701]])),\n",
-       " 'newcameramtx': array([[ 12.37223768,   0.        , 137.05413674],\n",
-       "        [  0.        ,  11.25096126,  45.12878087],\n",
+       " 'dist': array([[ 0.21235806, -0.47267247, -0.00106177, -0.00123414,  0.28311425]]),\n",
+       " 'newcameramtx': array([[534.82815439,   0.        , 321.82941307],\n",
+       "        [  0.        , 536.09892081, 242.44036121],\n",
        "        [  0.        ,   0.        ,   1.        ]]),\n",
-       " 'roi': (128, 39, 18, 13)}"
+       " 'roi': (3, 2, 634, 474)}"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute new camera matrix\n",
-    "h, w = gray.shape[:2]\n",
     "vals = cv2.getOptimalNewCameraMatrix(params[\"mtx\"], params[\"dist\"], (w,h), 1, (w,h))\n",
     "keys = (\"newcameramtx\", \"roi\")\n",
     "\n",
@@ -216,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,18 +173,12 @@
     "\t# Load image\n",
     "\timg = cv2.imread(os.path.join(image_folder, fname), cv2.IMREAD_UNCHANGED)\n",
     "\n",
-    "\tparams[\"newcameramtx\"] = np.array([\n",
-    "\t\t[70, 0.0, 81.92717558174809],\n",
-    "        [0.0, 68, 56.23740168870427], \n",
-    "        [0.0, 0.0, 1.0]\n",
-    "\t])\n",
-    "\n",
     "\t# Undistort\n",
     "\timg = cv2.undistort(img, params[\"mtx\"], params[\"dist\"], None, params[\"newcameramtx\"])\n",
     "\n",
     "\t# Crop the image\n",
-    "\t# x, y, w, h = params[\"roi\"]\n",
-    "\t# img = img[y:y+h, x:x+w]\n",
+    "\tx, y, w, h = params[\"roi\"]\n",
+    "\timg = img[y:y+h, x:x+w]\n",
     "\n",
     "\t# Show image\n",
     "\tcv2.imshow(\"img\", img)\n",
@@ -250,78 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class LeptonDewarp:\n",
-    "    camera_matrix = np.array([\n",
-    "        [104.65403680863373, 0.0, 79.12313258957062],\n",
-    "        [0.0, 104.48251047202757, 55.689070170705634],\n",
-    "        [0.0, 0.0, 1.0]\n",
-    "    ])\n",
-    "\n",
-    "    distortion_coeffs = np.array([\n",
-    "        -0.397583085816071270,\n",
-    "        +0.180686417456711930,\n",
-    "        +0.004626461618389028,\n",
-    "        +0.004197358204037882,\n",
-    "        -0.033813994995914630\n",
-    "    ])\n",
-    "\n",
-    "    new_cam_matrix = np.array([\n",
-    "        [66.54581451416016, 0.0, 81.92717558174809],\n",
-    "        [0.0, 64.58526611328125, 56.23740168870427], \n",
-    "        [0.0, 0.0, 1.0]\n",
-    "    ])\n",
-    "\n",
-    "    def dewarp(self, img, crop=True):\n",
-    "        out = cv2.undistort(\n",
-    "            src=img, \n",
-    "            cameraMatrix=self.camera_matrix,\n",
-    "            distCoeffs=self.distortion_coeffs,\n",
-    "            newCameraMatrix=self.new_cam_matrix\n",
-    "        )\n",
-    "\n",
-    "        if crop:\n",
-    "            row, col = out.shape[0:2]\n",
-    "            return out[16:row-16, 12:col-12]\n",
-    "        else: return out\n",
-    "        \n",
-    "# Test Undistort\n",
-    "cv2.namedWindow(\"img\", cv2.WINDOW_NORMAL)\n",
-    "\n",
-    "dw = LeptonDewarp()\n",
-    "\n",
-    "images = os.listdir(image_folder)\n",
-    "for fname in images:\n",
-    "\t# Load image\n",
-    "\timg = cv2.imread(os.path.join(image_folder, fname), cv2.IMREAD_UNCHANGED)\n",
-    "\n",
-    "\t# Undistort\n",
-    "\timg = dw.dewarp(img)\n",
-    "\n",
-    "\t# Crop the image\n",
-    "\t# x, y, w, h = params[\"roi\"]\n",
-    "\t# img = img[y:y+h, x:x+w]\n",
-    "\n",
-    "\t# Show image\n",
-    "\tcv2.imshow(\"img\", img)\n",
-    "\twhile cv2.waitKey(0) != ord('q'): continue\n",
-    "\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ret': 0.18843763406338257, 'mtx': [[524.2755675157524, 0.0, 322.5883217167881], [0.0, 525.772708925735, 242.7950238884331], [0.0, 0.0, 1.0]], 'dist': [[0.21278355925005868, -0.47699693160945694, -0.0011051479542858727, -0.0012412176630451593, 0.2923106324942272]], 'rvecs': [[[-0.2475632335809654], [-0.07118388910618222], [0.018128024362096543]], [[-0.24655066637714632], [-0.08933915500551615], [0.01965856942833153]], [[-0.24373241778761864], [-0.01729020765880648], [0.010753564399575085]], [[-0.07351324368951012], [0.011611545009801091], [0.0031926211405833905]], [[-0.07680293484436597], [0.030179515108039946], [-0.0011318604082684674]], [[-0.07630727649406926], [0.047402661429152344], [-0.0008382545697365868]], [[-0.07209540196156447], [-0.017463687592352253], [0.009745002981140538]], [[-0.12185504943449557], [-0.22126318728830618], [0.042182389484873906]], [[-0.08825097571798324], [0.044584993255638576], [-0.045342701699483214]]], 'tvecs': [[[-0.092251039146032], [-0.05034086279878023], [0.2628232176859729]], [[-0.06872296267787074], [-0.05100167433533709], [0.2587471773144057]], [[-0.12561974247126023], [-0.040429559830526], [0.2975258309734758]], [[-0.08571330618462278], [-0.09293690700554068], [0.2812174888175977]], [[-0.057071027467584204], [-0.09199422831353542], [0.2806036763758721]], [[-0.13374006898271038], [-0.09293772892045107], [0.2863717191386568]], [[-0.10318237828319059], [-0.08204906812540061], [0.3627491978981765]], [[-0.01893105094204302], [-0.07723192538557938], [0.2834032288943451]], [[-0.16035081996287237], [-0.07521655984185184], [0.3316851364267685]]], 'newcameramtx': [[532.3042362690076, 0.0, 322.1390129090841], [0.0, 534.8992373335793, 241.0801797077935], [0.0, 0.0, 1.0]], 'roi': [4, 2, 472, 635]}\n"
+      "{'ret': 0.18752077616544316, 'mtx': [[524.365705929502, 0.0, 322.57309626948467], [0.0, 525.8738137402916, 242.91852868340916], [0.0, 0.0, 1.0]], 'dist': [[0.21235806220663594, -0.4726724653162688, -0.0010617699345519614, -0.0012341367248378263, 0.2831142450597614]], 'newcameramtx': [[534.828154385763, 0.0, 321.8294130720405], [0.0, 536.0989208132096, 242.4403612135718], [0.0, 0.0, 1.0]], 'roi': [3, 2, 634, 474]}\n"
      ]
     }
    ],
